--- a/src/app/pages/products-grid/products-grid.html
+++ b/src/app/pages/products-grid/products-grid.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container class="h-full">
   <!-- Sidebar -->
-  <mat-sidenav mode="side" opened="true">
+  <mat-sidenav mode="side" [opened]="sidenavExpanded()">
     <div class="p-6">
       <h2 class="text-lg text-gray-900">Categories</h2>
       <mat-nav-list>
@@ -13,7 +13,7 @@
             <span
               matListItemTitle
               class="font-medium"
-              [class]="cat === category() ? '!text-white' : null"
+              [class]="cat === category() ? 'text-white!' : null"
             >
               {{ cat | titlecase }}
             </span>
@@ -25,17 +25,20 @@
   <!-- Content -->
   <mat-sidenav-content class="bg-white p-6">
     <div class="flex items-center justify-between mb-6">
-      <div>
+      <div class="flex items-center gap-2">
+        <button (click)="toggleSidenav()" matIconButton class="transition">
+          <mat-icon fontIcon="menu" />
+        </button>
         <h1 class="text-2xl font-bold text-gray-900">{{ category() | titlecase }}</h1>
-        <p class="text-base text-gray-600 mt-1">{{ filteredProducts().length }} products found</p>
       </div>
+      <p class="text-base text-gray-600 mt-1">{{ filteredProducts().length }} products found</p>
     </div>
     <div class="responsive-grid">
       @for (product of filteredProducts(); track product.id) {
         <app-product-card [product]="product">
           <app-toggle-wishlist-button
             [product]="product"
-            class="!absolute z-10 top-3 right-3 !bg-white shadow-md rounded-md transition-all duration-200 hover:scale-110 hover:shadow-lg"
+            class="absolute! z-10 top-3 right-3 bg-white! shadow-md rounded-md transition-all duration-200 hover:scale-110 hover:shadow-lg"
             [style.view-transition-name]="'wishlist-button-' + product.id"
           />
         </app-product-card>
